2007-04-11  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Use CFLAGS/LDFLAGS in addition to 
	PCRE_CFLAGS/PCRE_LIBS when checking system PCRE.  (#421607, 
	Paul Jarc)

2007-03-27  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/gdate.h: Remove old comment and forward declaration of
	struct tm: gdate.h includes time.h now.

2007-03-23  Matthias Clasen  <mclasen@redhat.com> 

	* tests/gobject/Makefile.am: Handle $RANDOM missing.  (#356843,
	Paul Jarc)

2007-03-22  Matthias Clasen  <mclasen@redhat.com> 

	* glib/guniprop.c: Fix corner-cases of upper/lowercase conversion.
	(#418217, Denis Jacquerye)

2007-03-22  Chris Wilson  <chris@chris-wilson.co.uk>

	* glib/gkeyfile.c: Track whether the last key=value pair in a group
	is a blank line and during to_data() only insert a new blank line
	betweens group in its absence. This allows the beautification of the
	GKeyFile and prevents newlines being inserted indefinitely. (#420686)

	* tests/keyfile-test.c (test_reload_idempotency): Test that after a 
	single beautification pass, g_key_file_to_data() does not alter its
	input data.

2007-03-21  Matthias Clasen  <mclasen@redhat.com>

	* glib/pcre/Makefile.am: Make builddir != srcdir work.  (#419900)

2007-03-19  Paolo Borelli  <pborelli@katamail.com>

	* glib/gutf8.c (fast_validate_len): remove unneeded checks.

2007-03-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/gregex.c: Cosmetic fixes

2007-03-17  Marco Barisione <marco@barisione.org>

	* glib/update-pcre/table-reduction.patch:
	* glib/update-pcre/make_utt.py:
	* glib/update-pcre/utt.patch: Add forgotten files

	* glib/update-pcre/update.sh: Call python directly instead of relying
	on shebang. Also copy the changes from glib/pcre/makefile.msc to this
	file

2007-03-17  Hans Breuer  <hans@breuer.org>

	* glib/makefile.msc.in glib/pcre/makefile.msc 
	  glib/update-pcre/update.sh : define PCRE_STATIC to reflect the 
	inclusion of pcre as LIB, not stand-alone DLL. Also set NEWLINE=-1